<?xml version="1.0"?>
<package format="3">
  <name>horizon_arm_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 配置：new_arm 的 SRDF、OMPL、KDL、假控制器等</description>

  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>new_arm</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

