<?xml version="1.0"?>
<package format="3">
  <name>new_arm</name>
  <version>0.1.0</version>
  <description>URDF 描述包：包含 new_arm 机械臂模型与显示 launch</description>

  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


